--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,7 @@
 .modalContent {
-  border-radius: 1.2rem;
+  border-radius: 1rem;
 }
 
 .modal {
-  padding: calc(1rem + 2vw) calc(1.5rem + 1.5vw);
+  padding: 0;
 }
