--- a/components/modals/URLAnalyticsModal.module.css
+++ b/components/modals/URLAnalyticsModal.module.css
@@ -25,6 +25,13 @@
   flex-direction: column;
 }
 
+.analyticsHeader {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .bottom {
   width: 100%;
   display: flex;
